--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "notes"
+name = "frontend"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = "0.19.3"
+web-sys = "0.3.60"
+yew = { path = "../../yew/packages/yew", features = ["csr"] }
