--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.2.1"
+axum = "0.6.11"
+tokio = { version = "1.26.0", features = ["full"] }
