--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
+actix-web = "4.3.1"
+dotenvy = "0.15.7"
+sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
+tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
