--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
+serde = "1.0.166"
+yew = { version = "0.20.0", features = ["csr"] }
