feat: added meal form
- able to create a simple meal
	- for now meal only has a name for easier developement
	- next step: storing meal to backend
	- look for options to share types between client and backend

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+gloo-console = "0.2.3"
 serde = "1.0.166"
+web-sys = "0.3.64"
 yew = { version = "0.20.0", features = ["csr"] }
 yew-router = "0.17.0"
