--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 axum = "0.7.3"
 serde = "1.0.194"
-sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres"] }
+sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "time", "chrono"] }
 tokio = { version = "1.35.1", features = ["full"] }
